tests/invalid/generated_binop_pow_float_bytearray/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: float = 1.0
    y: bytearray = bytearray(b"hello")
    z = x ** y
